src/process/build/log/idf_py_stderr_output_183197
/home/daniel/Documents/GitHub/camara-esp32-espidf/src/process/main/process.c: In function 'app_main':
/home/daniel/Documents/GitHub/camara-esp32-espidf/src/process/main/process.c:212:13: error: size of array 'array' exceeds maximum object size '2147483647'
  212 |         int array [2147483646];
      |             ^~~~~
/home/daniel/Documents/GitHub/camara-esp32-espidf/src/process/main/process.c:212:13: warning: unused variable 'array' [-Wunused-variable]
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:63: esp-idf/main/CMakeFiles/__idf_main.dir/process.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:4739: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:130: all] Error 2
